Implemented partially working loadPage

--- a/Assignment_3/CMakeLists.txt
+++ b/Assignment_3/CMakeLists.txt
@@ -20,3 +20,5 @@ add_executable(Assignment_3
         shell.h
         shellmemory.c
         shellmemory.h memorymanager.c memorymanager.h)
+
+target_link_libraries(Assignment_3 m)
